two lists drag and drop widget

--- a/src/Project.Web.Host/src/tsconfig.json
+++ b/src/Project.Web.Host/src/tsconfig.json
@@ -3,6 +3,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata":true,
     "lib": [ "es6", "dom" ],
     "mapRoot": "./",
     "module": "es2020",
