--- a/src/Project.Web.Host/package.json
+++ b/src/Project.Web.Host/package.json
@@ -43,15 +43,17 @@
     "angular-svg-round-progressbar": "^3.0.1",
     "angular2-hotkeys": "^2.2.0",
     "angular2-notifications": "^9.0.0",
+    "bootstrap": "^5.2.3",
     "chart.js": "^2.9.3",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
     "firebase": "^7.15.5",
+    "jquery": "^3.6.3",
     "lodash-es": "^4.17.15",
     "moment": "2.24.0",
     "moment-timezone": "0.5.33",
     "ng2-nouislider": "^1.8.2",
-    "ngx-bootstrap": "^5.6.1",
+    "ngx-bootstrap": "^5.6.2",
     "ngx-contextmenu": "^5.4.0",
     "ngx-dropzone-wrapper": "^9.0.0",
     "ngx-ellipsis": "^2.3.1",
@@ -62,6 +64,7 @@
     "ngx-sortablejs": "^3.1.4",
     "nouislider": "^14.6.0",
     "perfect-scrollbar": "^1.5.5",
+    "popper.js": "^1.16.1",
     "push.js": "1.0.12",
     "quill": "^1.3.7",
     "rxjs": "^6.4.0",
