--- a/src/Project.Web.Host/package.json
+++ b/src/Project.Web.Host/package.json
@@ -61,6 +61,7 @@
     "ngx-ellipsis": "^2.3.1",
     "ngx-lightbox": "^2.1.2",
     "ngx-pagination": "^5.0.0",
+    "ngx-pagination-bootstrap": "^1.6.0",
     "ngx-perfect-scrollbar": "^9.0.0",
     "ngx-quill": "^12.0.1",
     "ngx-sortablejs": "^3.1.4",
